# backend-ai

./: .gitignore  Caddyfile  README.md  auto_video.py  bash.exe.stackdump  docker-compose.yml  main.py  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: issue--feature-request.md
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Header.tsx
frontend/src/pages/: Dashboard.tsx  VideoDetail.tsx
src/: db.py  lib.py  openai.py  task_queue.py  video.py
src/lib/: edit.py  embedding.py  llm.py  tts.py  video.py
src/routers/: ___edit.py  __edit.py  edit.py  story.py  tts_service.py  video.py
