[project]
name = "backend-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "litellm>=1.65.4.post1",
    "openai>=1.71.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
